updated rtw101 div, testimonials slider, main slider text

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -40,15 +40,15 @@ nav.navbar.navbar-default.navbar-static-top {
 
 .background-wrapper {
 	background-color: #8FC2E9;
-	height: 337vh;
+	height: 400vh;
 }
 
 img.nav-logo {
 	margin-top: -15px;
 	width: 190px;
 }
-/* ////// CAROUSEL /////// */
 
+/* ////// CAROUSEL /////// */
 #owl-demo .item img{
     display: block;
     width: 100%;
@@ -72,20 +72,28 @@ img.nav-logo {
 	width: 75%;
 	color: #fff;
 	text-align: center;
-	/*display: block;*/
 	margin: 60px auto;
 }
 
 .image-content p:nth-child(1) {
 	font-size: 40px;
+	color: #333;
 } 
 
-.image-content p:nth-child(2) {
+.image-content p:nth-child(2), .image-content p:nth-child(3) {
 	font-size: 30px;
-	width: 60%;
+	color: #333;
+	width: 75%;
 	display: block;
 	margin: 20px auto 10px;
 } 
+
+.image-content-sub {
+	color: #333;
+	font-size: 24px;
+	display: block;
+	margin: -15px auto 20px;
+}
 
 .btn-lg {
 	font-family: 'Source Sans Pro', sans-serif !important;
@@ -125,7 +133,7 @@ img.nav-logo {
 	width: 100%;
 	min-height: 185px;
 	clear: both;
-	background-color: #ccc;
+	background-color: #f0f0f0;
 	font-size: 18px;
 }
 
@@ -134,18 +142,51 @@ img.nav-logo {
 }
 
 .phone, .biz {
-	height: auto;
+	position: relative;
+	height: 380px;
 	text-align: left;
+	width: 50%;
+	margin: 40px auto;
+	background-color: #fff;
 	padding: 15px 30px 10px 30px !important;
+	-webkit-box-shadow: 0px 0px 13px 0px rgba(50, 50, 50, 0.5);
+  -moz-box-shadow:    0px 0px 13px 0px rgba(50, 50, 50, 0.5);
+	box-shadow:         0px 0px 13px 0px rgba(50, 50, 50, 0.5);
+}
+
+.phone img, .biz img {
+	margin: -30px auto 0;
+	padding: 12px;
+	color: #000;
+	display: block;
+	background-color: #fff;
+	border-radius: 50px;
+	-webkit-box-shadow: 0px 0px 5px 0px rgba(50, 50, 50, 0.5);
+  -moz-box-shadow:    0px 0px 5px 0px rgba(50, 50, 50, 0.5);
+	box-shadow:         0px 0px 5px 0px rgba(50, 50, 50, 0.5);
+}
+
+.phone p:nth-child(2), .biz p:nth-child(2) {
+	font-size: 26px;
+	color: #8F040B;
+	text-align: center;
+}
+
+.phone {
+	margin-right: 40px;
+}
+.biz {
+	margin-left: 40px;
 }
 
 .call-to-action {
-	text-align: center;
+	margin: 10px auto;
+	text-align: 	center;
 	font-size: 20px;
 	padding: 5px;
 	background-color: #fff;
 	border: 3px solid #E5E5E5;
-	width: 40%;
+	width: 85%;
 	bottom: 10px;
 }
 
@@ -174,7 +215,7 @@ img.nav-logo {
 }
 
 .rtw101-content, .rtw101-nav {
-	/*box-sizing: border-box;*/
+	box-sizing: border-box;
 	height: 100%;
 	float: left;
 }
@@ -182,7 +223,11 @@ img.nav-logo {
 .rtw101-content {
 	width: 70%;
 	border-right: 2px solid #FFF;
-	overflow: scroll;
+}
+
+.rtw101-nav {
+	width: 30%;
+	padding: 1%;
 }
 
 .content-default {
@@ -214,66 +259,25 @@ img.nav-logo {
 	transform: translate(2px, 0px) rotate(0deg) skew(0deg, -13deg) scale(1, 1); 
 }
 
-.ready-div, .set-div, .go-div {  
-	display: none;
-	height: 100%;
+.rtw101-splash-sub {
+	color: #fff;
 	width: 100%;
-	color: #E5E5E5;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 26px;
 }
 
-.ready-div {
-	background: url(https://farm4.staticflickr.com/3118/2916379491_8ac3efe4d1_o.jpg) no-repeat center;
-}
-.set-div {
-	background-color: darkblue;
-} 
-.go-div {
-	background-color: darkorange;
+
+
+	/* ///// CONTENT NAV ////// */
+.form-horizontal {
+	text-align: left;
 }
 
-.ready-div.current, .set-div.current, .go-div.current {
-	display: block;
-}
-
-		/* ///// CONTENT NAV ////// */
-.rtw101-nav {
-	width: 30%;
-	padding-top: 10px;
-	overflow: scroll;
-}
-
-.ready, .set, .go {
-	cursor: pointer;
-}
-
-.rtw101-nav li {
-	cursor: pointer;
-	padding-left: 10px;
-}
-
-.rtw101-nav li:hover {
-	border-left: 3px solid orange;
-	color: orange;
-} 
-
-.ready.current, .set.current, .go.current {
-	color: orange;
-}
-
-.ready-hiddenitems, .set-hiddenitems, .go-hiddenitems {
-	display: none;
-}
-
-.ready-hiddenitems.current, .set-hiddenitems.current, .go-hiddenitems.current {
-	display: block;
-}
-
-.hiddenitems {
+.world-by-airtreks {
+	position: relative;
 	width: 100%;
-	overflow: hidden;
-	/*margin-left: -1px;*/
+	padding: 20px;
 }
-
 
 
    /* ///// SPECIALS //// */
@@ -357,6 +361,30 @@ img.nav-logo {
 	display: none;
 }
 
+
+/* ///// TESTIMONIALS //// */
+
+.testimonials-container {
+	background-color: lightgray;
+	height: 48vh;
+	width: 100%;
+	padding: 10px 0;
+}
+
+.carousel-inner {
+	font-size: 18px;
+	position: relative !important;
+	width: 50% !important;
+	overflow: hidden;
+	margin: 15px auto !important;
+	height: 150px !important; 
+	/*padding: 0 25px 25px 25px !important;*/
+}
+
+.carousel-indicators {
+	bottom: -35px !important;
+}
+
 	/*//////// FOOTER ////////*/
 .footer {
 	margin: 0;
@@ -425,7 +453,7 @@ img.nav-logo {
   margin: 0 auto;
 }
 
-.masonry .item {
+.masonry .itemz {
   width: 300px;
   height: auto;
   float: left;
@@ -436,14 +464,14 @@ img.nav-logo {
   margin: 5px;
 }
 
-.item:hover {
+.itemz:hover {
   border-color: #111;
   background-color: lightblue;
   cursor: pointer;
 }
 
 /*////////////////*/
-.item {
+.itemz {
   -webkit-transition: width 0.4s, height 0.4s;
      -moz-transition: width 0.4s, height 0.4s;
        -o-transition: width 0.4s, height 0.4s;
@@ -451,18 +479,18 @@ img.nav-logo {
 }
 
 
-/* both item and item content change size */
-.item.is-expanded,
-.item.is-expanded .item-content {
+/* both itemz and itemz content change size */
+.itemz.is-expanded,
+.itemz.is-expanded .itemz-content {
   width: 400px;
   height: auto;
 }
 
-.item.is-expanded {
+.itemz.is-expanded {
   z-index: 2;
 }
 
-.item.is-expanded {
+.itemz.is-expanded {
   background: #F90;
 }
 
