--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,56 +2,56 @@
   
 	<div class="masonry js-masonry"  data-masonry-options='{ "isFitWidth": true }'>
 	
-	  <div class="item ease">
+	  <div class="itemz ease">
 	   		<div class="img-box">
 	   			<img src="/assets/airplanes.jpg">
 	   		</div>
 	   		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
 	  </div>
 		
-		<div class="item ease">
+		<div class="itemz ease">
 			<div class="img-box">
 	   		<img src="/assets/airplanes.jpg">
 	 		</div>
   		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
 	  </div>
 
-		<div class="item ease">
+		<div class="itemz ease">
 			<div class="img-box">
 	   		<img src="/assets/airplanes.jpg">
 	 		</div>
   		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
 	  </div>
 
-		<div class="item ease">
+		<div class="itemz ease">
 			<div class="img-box">
 	   		<img src="/assets/airplanes.jpg">
 	 		</div>
   		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
 	  </div>
 
-		<div class="item ease">
+		<div class="itemz ease">
 			<div class="img-box">
 	   		<img src="/assets/airplanes.jpg">
 	 		</div>
   		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
 	  </div>
 
-		<div class="item ease">
+		<div class="itemz ease">
 			<div class="img-box">
 	   		<img src="/assets/airplanes.jpg">
 	 		</div>
   		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
 	  </div>
 
-		<div class="item ease">
+		<div class="itemz ease">
 			<div class="img-box">
 	   		<img src="/assets/airplanes.jpg">
 	 		</div>
   		<p>all of the text all of the text all of the text all of the text all of the text all of the text all of the text all of the text </p>
 	  </div>
 
-		<div class="item ease">
+		<div class="itemz ease">
 			<div class="img-box">
 	   		<img src="/assets/airplanes.jpg">
 	 		</div>
@@ -59,25 +59,25 @@
 	  </div>
 
 		
-		<div class="item ease">
+		<div class="itemz ease">
 	   		three point one
 	  </div>
 		
-		<div class="item ease">
+		<div class="itemz ease">
 	   		four
 	  </div>
 
-		<div class="item ease">
+		<div class="itemz ease">
 			<div class="img-div">
 	   		five
 	   	</div>
 	  </div>
 		
-		<div class="item ease">
+		<div class="itemz ease">
 	   		five
 	  </div>
 		
-		<div class="item ease">
+		<div class="itemz ease">
 	   		five
 	  </div>
 
