--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,11 +1,11 @@
 <!-- ///////// CAROUSEL ////////// -->
-
 	<div id="owl-demo" class="owl-carousel owl-theme cursor">
 	  <div class="item">
 	  	<div class="image-wrapper">
 	  		<div class="image-content">
-  				<p>Last week, 10,612 people used TripPlanner to price their Around the World Tickets or Multi Destination Flights.</p>
-			  	<p>Now it’s your turn to get instant pricing for any Round the World trip.</p>
+  				<p>Last week, 10,612 people used TripPlanner to price around the world tickets or multi destination flights</p>
+			  	<p>Now it’s your turn</p> 
+			  	<p>Get instant pricing for any round the world trip right now</p>
 			  	<button type="button" class="btn btn-primary btn-lg begin-button"><em>Begin Your Journey Here</em></button><br><br>
 			  	<p><a href="#">Free travel insurance included on every qualified trip!</a></p>
 		  	</div>
@@ -16,23 +16,10 @@
 	  <div class="item">
 	  	<div class="image-wrapper">
 	  		<div class="image-content">
-  				<p>Find out why AirTreks is the best Around the World ticket provider anywhere.</p><br>
-	  			<button type="button" class="btn btn-primary btn-lg">Testimonials</button>
-		  		<!-- <div class="why-airtreks">
-		  			<p>Why AirTreks</p> 
-		  			<p>For over 25 years AirTreks has been helping people with their Around the World travel needs. There are so many good reasons to choose AirTreks for your Around-the-World ticket. Here are just a few:</p>
-		  			<p>We have TripPlanner.</p> 
-		  			<p>The only Around The World Ticket pricing estimate tool on the Internet. It’s free for everyone, everywhere, at any time.</p>
-		  			<p>We save people money.</p> 
-		  			<p>TripPlanner and our Personal Travel Consultants think people through their itineraries resulting in great options and lower prices. We save people time and effort. It’s simple and easy to book all your tickets from one source.</p>
-		  			<p>People love our customer support. Sometimes things don’t go exactly according to plan. When you need to make changes, we’re there for you.</p> 
-		  			<p>We are the only RTW ticket company that includes travel insurance. </p>
-		  			<p>Natural disasters? Stolen or lost items? Sickness or injuries? Get covered. </p>
-		  			<p>Our Personal Travel Consultants help more RTW travelers than anyone else in the world. </p>
-		  			<p>No company deals in RTW trips more than we do. </p>
-		  			<p>If you’re planning an around the world trip, let AirTreks help review your trip so you can bring home the one you want. </p>
-		  			<p>Learn more about using an agency vs doing it yourself.</p>
-					</div> -->	  			
+  				<p>Find out why AirTreks is the best Around the World ticket provider anywhere.</p>
+  				<p>Why AirTreks?</p> 
+  				<p>For almost 30 years we have been helping people realize their dreams of around the world travel.</p><br>
+	  			<button type="button" class="btn btn-primary btn-lg">Testimonials</button>  			
 	  		</div>
 	  	</div>
 	  	<img src="assets/sp_stairs.jpg" alt="flickr.com/davideragusa">
@@ -41,7 +28,8 @@
 	  <div class="item">
 	  	<div class="image-wrapper">
 	  		<div class="image-content">
-		  		<p style="color:#222">Learn how to travel around the world.</p><br>
+		  		<p>Learn how to travel around the world.</p>
+		  		<p class="image-content-sub">We've crafted more than 50 articles with all our best advice for anyone making the leap to long-term, around-the-world travel.</p><br>
 			  	<button type="button" class="btn btn-primary btn-lg" id="tortw">Check out RTW 101</button>
 		  	</div>
 		  </div>
@@ -51,26 +39,31 @@
 
 	<!-- //////// PHONE & BIZ CLASS ///////// -->
 	<div class="phone-and-biz row">
+		<a name="phonebizanchor" id="phonebizanchor"></a>
 
-		<div class="col-md-6 phone">
-			<p style="font-size:26px;color:#8F040B">Call 1-877-AIRTREKS (1-415-977-7100)</p>
-			<p>Can your trip be more fun? Take 15 minutes and chat with a Personal Travel Consultant. Let them work their itinerary magic.</p>
-			<div class="call-to-action ease">We like fun!</div>
+		<div class="col-md-6">
+			<div class="phone">
+				<img src="assets/phone.png">
+				<p>Call us:<br>1-877-AIRTREKS<br>(1-415-977-7100)</p>
+				<p>Can your trip be more fun? Take 15 minutes and chat with a Personal Travel Consultant. Let them work their itinerary magic.</p>
+				<div class="call-to-action ease">We like fun!</div>
+			</div>
 		</div>
 	
-		<div class="col-md-6 biz">
-			<p style="font-size:26px; color:#8F040B">Business/First Class Airfares</p> 
-			<p>For business class pricing of your complex international trip, contact one of our expert Personal Travel Consultants for a custom quote.</p>
-			<div class="call-to-action ease">Submit your trip details</div>
+		<div class="col-md-6">
+			<div class="biz">
+				<img src="assets/paper_plane.png">
+				<p>Business/First Class Airfares</p> 
+				<p>For business or first class pricing of your complex international trip, contact one of our expert Personal Travel Consultants - we'll get back to you with a custom quote.</p>
+				<div style="margin-top:22px" class="call-to-action ease">Submit your trip</div>
+			</div>
 		</div>
 
 	</div>
 
 
 	<!-- //////// RTW 101 - CONTENT ///////// -->
-
-	<div class="content-box">
-		
+	<div class="content-box">	
 
 		<div id="toRTW101"></div>
 		<div class="rtw101">
@@ -79,306 +72,60 @@
 				<div class="content-default">
 					<a name="rtwBannerAnchor" id="rtwBannerAnchor"></a>
 					<a href="/articles"><div class="rtw101-splash">RTW 101</div></a>
+					<div class="rtw101-splash-sub">A mini-course for people who want to travel around the world.</div>
 				</div>
-
-				<div class="ready-div view-options">Ready</div>
-				<div class="set-div view-options">Set</div>
-				<div class="go-div view-options">Go</div>
 			</div>
 
 			<!-- // CONTENT NAV // -->
 			<div class="rtw101-nav">
 				
-					<h2 class="nav-title">How to Travel the World on a RTW Ticket</h2>
-					<!-- <h3 class="ready view-options text-left">Ready</h3>
-					<div class="ready-hiddenitems hiddenitems">
-						<ul>
-							<li class="text-left">
-								ready 1
-							</li>
-							<li class="text-left">
-								ready 2
-							</li>
-							<li class="text-left">
-								ready 3
-							</li>
-							<li class="text-left">
-								ready 4
-							</li>	
-							<li class="text-left">
-								ready 5
-							</li>
-							<li class="text-left">
-								ready 6
-							</li>
-							<li class="text-left">
-								ready 7
-							</li>
-							<li class="text-left">
-								ready 8
-							</li>	
-							<li class="text-left">
-								ready 9
-							</li>
-							<li class="text-left">
-								ready 10
-							</li>
-							<li class="text-left">
-								ready 11
-							</li>
-							<li class="text-left">
-								ready 12
-							</li>	
-							<li class="text-left">
-								ready 13
-							</li>
-							<li class="text-left">
-								ready 14
-							</li>
-							<li class="text-left">
-								ready 15
-							</li>
-							<li class="text-left">
-								ready 16
-							</li>	
-							<li class="text-left">
-								ready 17
-							</li>
-							<li class="text-left">
-								ready 18
-							</li>
-							<li class="text-left">
-								ready 19
-							</li>
-							<li class="text-left">
-								ready 20
-							</li>	
-							<li class="text-left">
-								ready 21
-							</li>
-							<li class="text-left">
-								ready 22
-							</li>
-						</ul>
-					</div>
-					<h3 class="set view-options text-left">Set</h3>
-					<div class="set-hiddenitems hiddenitems">
-						<ul>
-							<li class="text-left">
-								set 1
-							</li>
-							<li class="text-left">
-								set 2
-							</li>
-						</ul>
-					</div>
-					<h3 class="go view-options text-left">Go</h3>
-					<div class="go-hiddenitems hiddenitems">
-						<ul>
-							<li class="text-left">
-								go 1
-							</li>
-							<li class="text-left">
-								go 2
-							</li>
-							<li class="text-left">
-								go 3
-							</li>
-							<li class="text-left">
-								go 4
-							</li>
-							<li class="text-left">
-								go 5
-							</li>
-							<li class="text-left">
-								go 6
-							</li>
-							<li class="text-left">
-								go 7
-							</li>
-							<li class="text-left">
-								go 8
-							</li>
-							<li class="text-left">
-								go 9
-							</li>
-							<li class="text-left">
-								go 10
-							</li>
-							<li class="text-left">
-								go 11
-							</li>
-							<li class="text-left">
-								go 12
-							</li>
-						</ul>	
-					</div> -->
-				
-					<div class="panel-group" id="accordion">
-					  
-					  <div class="panel panel-default ready-nav">
-					      <div class="panel-heading">
-						      <h4 class="panel-title">
-									  <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-					          Ready
-						 			  </a>
-					      	</h4>
-					    	</div>
-					    
-					    <div id="collapseOne" class="panel-collapse collapse in"> 
-					      <div class="panel-body">
-					 	        <div>
-											<li class="text-left">
-												ready 1
-											</li>
-											<li class="text-left">
-												ready 2
-											</li>
-											<li class="text-left">
-												ready 3
-											</li>
-											<li class="text-left">
-												ready 4
-											</li>	
-											<li class="text-left">
-												ready 5
-											</li>
-											<li class="text-left">
-												ready 6
-											</li>
-											<li class="text-left">
-												ready 7
-											</li>
-											<li class="text-left">
-												ready 8
-											</li>	
-											<li class="text-left">
-												ready 9
-											</li>
-											<li class="text-left">
-												ready 10
-											</li>
-											<li class="text-left">
-												ready 11
-											</li>
-											<li class="text-left">
-												ready 12
-											</li>	
-											<li class="text-left">
-												ready 13
-											</li>
-											<li class="text-left">
-												ready 14
-											</li>
-											<li class="text-left">
-												ready 15
-											</li>
-											<li class="text-left">
-												ready 16
-											</li>	
-											<li class="text-left">
-												ready 17
-											</li>
-											<li class="text-left">
-												ready 18
-											</li>
-											<li class="text-left">
-												ready 19
-											</li>
-											<li class="text-left">
-												ready 20
-											</li>	
-											<li class="text-left">
-												ready 21
-											</li>
-											<li class="text-left">
-												ready 22
-											</li>
-										</div>
-					     </div>
-					    </div>
-					  </div>
+				<h2 class="nav-title">Why AirTreks</h2>
+				<h5></h5>
+				<!-- <div class="world-by-airtreks"> -->
+					<!-- doc to help add the script for aweber form --> 
+					<!-- https://help.aweber.com/entries/48887918-How-Do-I-Add-A-Form-To-My-WordPress-Page- -->
+					<form class="form-horizontal">
+						<fieldset>
 
-					  <div class="panel panel-default set-nav">
-					    <div class="panel-heading">
-					      <h4 class="panel-title">
-					        <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-					          Set
-					        </a>
-					      </h4>
-					    </div>
-					    <div id="collapseTwo" class="panel-collapse collapse">
-					      <div class="panel-body">
-					    			<div>
-						    			<li class="text-left">
-												set 1
-											</li>
-											<li class="text-left">
-												set 2
-											</li>
-										</div>
-							  </div>
-					    </div>
-					  </div>
+						<h4>Or sign up for "The World By AirTreks"</h4>
+						<p>A 30-day email course to teach you:</p>
+							<ul>
+								<li>How Avoid the Most Common RTW Mistakes</li> 
+								<li>How Frequent Flier Miles Work On RTW Trips</li> 
+								<li>When Flying Can Ruin Your Trip</li> 
+								<li>14 Ways To Save Money On Your Trip</li>
+								<li>...and more</li>
+							</ul>
+						<div class="control-group">
+						  <label class="control-label" for="First Name">First Name</label>
+						  <div class="controls">
+						    <input id="First Name" name="First Name" type="text" placeholder="John Q" class="input-xlarge" required="">						 
+						  </div>
+						</div>
 
-					  <div class="panel panel-default go-nav">
-					    <div class="panel-heading">
-					      <h4 class="panel-title">
-					        <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-					          Go
-					        </a>
-					      </h4>
-					    </div>
-					    <div id="collapseThree" class="panel-collapse collapse">
-					      <div class="panel-body">
-					      		<div>
-											<li class="text-left">
-												go 1
-											</li>
-											<li class="text-left">
-												go 2
-											</li>
-											<li class="text-left">
-												go 3
-											</li>
-											<li class="text-left">
-												go 4
-											</li>
-											<li class="text-left">
-												go 5
-											</li>
-											<li class="text-left">
-												go 6
-											</li>
-											<li class="text-left">
-												go 7
-											</li>
-											<li class="text-left">
-												go 8
-											</li>
-											<li class="text-left">
-												go 9
-											</li>
-											<li class="text-left">
-												go 10
-											</li>
-											<li class="text-left">
-												go 11
-											</li>
-											<li class="text-left">
-												go 12
-											</li>
-										</div>	
-								</div>
-					    </div>
-					  </div>
-					</div>
+						<div class="control-group">
+						  <label class="control-label" for="textinput">Last Name</label>
+						  <div class="controls">
+						    <input id="textinput" name="textinput" type="text" placeholder="Traveler" class="input-xlarge" required="">
+						  </div>
+						</div>
 
+						<div class="control-group">
+						  <label class="control-label" for="textinput">Email</label>
+						  <div class="controls">
+						    <input id="textinput" name="textinput" type="text" placeholder="worldtraveler@gmail.com" class="input-xlarge" required="">
+						  </div>
+						</div>
 
-			</div> <!-- end of content nav div -->
+						</fieldset>
+					</form>
+				<!-- </div>	 -->
 
-		</div> <!-- end of rtw 101 content div -->
-	</div> <!-- end of content box --> 
+			</div>
+
+		</div> 
+	
+	</div> 
 
 	<!-- //////// SPECIALS //////// -->
 	<div class="specials_thumbs_container">
@@ -480,4 +227,80 @@
 
 		<a href="#"><div class="all-specials-msg ease">See all our specials!</div></a>
 
-	</div> <!-- specials thumbs container -->
+	</div>
+
+	<!-- ////// TESTIMONIALS /////// -->
+
+	<div class="testimonials-container">
+		<h2>What people are saying about us:</h2>
+
+		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  
+		  <div class="carousel-inner">
+		    <div class="item active">
+		      <p>Nicole (January 15, 2014)
+					<p>"Thank you so much! I appreciate the fast and friendly help at a low price. I have been recommending Airtreks to all of my friends, family and people I am meeting all over the world!</p>
+					<p>"Thanks for helping my adventure around the world"</p>
+		    </div>
+		    <div class="item">
+		      <p>Tom C. (September 3, 2013)</p>
+					<p>"Thank you and thank you again for the truly exceptional customer service you provided in getting this thing booked!"</p>
+		    </div>
+				<div class="item">
+		      <p>Carl Kruse @Carl_Kruze <a href="https://twitter.com/Carl_Kruse/statuses/374384278034849792">on Twitter</a> (September 3, 2013</a>)
+					<p>"Trying to sort complicated international travel plans or round the world flights? Airtreks.com is where it’s at. Highly recommended."</p>
+		    </div>
+				<div class="item">
+		      <p>David McCracken (April 19, 2013)</p>
+					<p>"I really appreciate the excellent service that AirTreks has provided and the prices could not be beat."</p>
+		    </div>
+				<div class="item">
+		      <p>Rebecca @Wanderlust326 <a href="https://twitter.com/Wanderlust326/status/324257225780625408">on Twitter</a> (April 16, 2013)</p>
+					<p>"Another fabulous experience buying #rtw flights with Airtreks! So helpful and understanding. Highly recommended!! East Asia here I come!"</p>
+		    </div>
+				<div class="item">
+		      <p>Undine E. Trotman (April 8, 2013)</p>
+					<p>"Thank you very much Airtreks for booking a completely seamless trip for me. I have already referred you to several of my friends!!!"</p>
+		    </div>
+				<div class="item">
+		      <p>Nikki Jumper @nikkijumper <a href="https://twitter.com/nikkijumper/status/320229633679319043">on Twitter</a> (April 8, 2013)
+					<p>"@airtreks changes everything!! ;)"</p>
+		    </div>
+				<div class="item">
+		      <p>Scott W @puckmaninmn <a href="https://twitter.com/puckmaninmn/status/292356064081502208">on Twitter</a> (January 18, 2013)
+					<p>"I used @airtreks for my honeymoon... Hawaii, Tokyo, Beijing, Hong Kong, New Zealand, Tahiti. Excellent service and price!"</p>
+		    </div>
+				<div class="item">
+		      <p>Mark Curtis (January 10, 2013)</p>
+					<p>"Very satisfied with my Airtreks experience – and I haven’t even departed yet.</p>
+				<p>"Thanks for great service."</p>
+		    </div>
+				<div class="item">
+		      <p>Noah (December 11, 2012)</p>
+					<p>"Thanks for your support and help – I couldn’t do my trips without your rockstar support. They would fall apart and I would stay home or be stuck somewhere."</p>
+		    </div>
+		  </div>
+
+			<!-- Indicators -->
+		  <ol class="carousel-indicators">
+		    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+		    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+		    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+		    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+		    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+		    <li data-target="#carousel-example-generic" data-slide-to="5"></li>
+		    <li data-target="#carousel-example-generic" data-slide-to="6"></li>
+		    <li data-target="#carousel-example-generic" data-slide-to="7"></li>
+		    <li data-target="#carousel-example-generic" data-slide-to="8"></li>
+		    <li data-target="#carousel-example-generic" data-slide-to="9"></li>
+		  </ol>
+
+	</div>
+
+
+
+	<!-- ////// WHY AIRTREKS & SIGNUP /////// -->
+
+
+
+
