--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -43,7 +43,8 @@
 
 		<div class="col-md-6">
 			<div class="phone">
-				<img src="assets/phone.png">
+				<!-- <img src="assets/phone.png"> -->
+				<i class="fa fa-phone fa-3x phoneicon"></i>
 				<p>Call us:<br>1-877-AIRTREKS<br>(1-415-977-7100)</p>
 				<p>Can your trip be more fun? Take 15 minutes and chat with a Personal Travel Consultant. Let them work their itinerary magic.</p>
 				<div class="call-to-action ease">We like fun!</div>
@@ -52,7 +53,8 @@
 	
 		<div class="col-md-6">
 			<div class="biz">
-				<img src="assets/paper_plane.png">
+				<i class="fa fa-paper-plane fa-3x bizicon"></i>
+				<!-- <img src="assets/paper_plane.png"> -->
 				<p>Business/First Class Airfares</p> 
 				<p>For business or first class pricing of your complex international trip, contact one of our expert Personal Travel Consultants - we'll get back to you with a custom quote.</p>
 				<div style="margin-top:22px" class="call-to-action ease">Submit your trip</div>
