--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -154,10 +154,16 @@ img.nav-logo {
 	box-shadow:         0px 0px 13px 0px rgba(50, 50, 50, 0.5);
 }
 
-.phone img, .biz img {
+.phone {
+	margin-right: 40px;
+}
+.biz {
+	margin-left: 40px;
+}
+
+.phoneicon, .bizicon {
 	margin: -30px auto 0;
-	padding: 12px;
-	color: #000;
+	color: #333;
 	display: block;
 	background-color: #fff;
 	border-radius: 50px;
@@ -166,17 +172,20 @@ img.nav-logo {
 	box-shadow:         0px 0px 5px 0px rgba(50, 50, 50, 0.5);
 }
 
+.phoneicon {
+	width: 80px;
+	padding: 18px 0px 5px 20px;
+}
+.bizicon {
+	width: 80px;
+	padding: 15px 0px 10px 10px;
+}
+
+
 .phone p:nth-child(2), .biz p:nth-child(2) {
 	font-size: 26px;
 	color: #8F040B;
 	text-align: center;
-}
-
-.phone {
-	margin-right: 40px;
-}
-.biz {
-	margin-left: 40px;
 }
 
 .call-to-action {
